Crash using material panel on 2.91.0 alpha #80034

Closed
opened 2020-08-23 09:53:45 +02:00 by Jonathan Mielke · 17 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-22 22:24, hash: 010c1370af
Worked: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-15 17:06, hash: 2c61c3d733 (could be later versions that work but didn't download any other build bot builds since then)

Short description of error
Blender crashes when accessing the grease pencil material properties panel

Exact steps for others to reproduce the error
Add Grease Pencil monkey primitive. Go to material properties panel for monkey primitive and then you should get a crash.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-22 22:24, hash: `010c1370af` Worked: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-15 17:06, hash: `2c61c3d733` (could be later versions that work but didn't download any other build bot builds since then) **Short description of error** Blender crashes when accessing the grease pencil material properties panel **Exact steps for others to reproduce the error** Add Grease Pencil monkey primitive. Go to material properties panel for monkey primitive and then you should get a crash.

Added subscriber: @JSM

Added subscriber: @JSM

#80005 was marked as duplicate of this issue

#80005 was marked as duplicate of this issue

Just tried adding a material to a normal 3D object and got a crash from that as well.
Seems something is up with the material properties code.

Just tried adding a material to a normal 3D object and got a crash from that as well. Seems something is up with the material properties code.

Added subscriber: @rboxman

Added subscriber: @rboxman

Most likely a duplicate of #80005

Most likely a duplicate of #80005
Jonathan Mielke changed title from Blender Grease Pencil Material Crash. 2.91.0 to Blender Grease Pencil Material Crash 2.91.0 alpha 2020-08-23 10:17:52 +02:00

In #80034#1000923, @rboxman wrote:
Most likely a duplicate of #80005

I'm inclined to agree since I just tested and the crashing doesn't occur if I have Cycles selected.
So probably something with Eevee draw code is off.

> In #80034#1000923, @rboxman wrote: > Most likely a duplicate of #80005 I'm inclined to agree since I just tested and the crashing doesn't occur if I have Cycles selected. So probably something with Eevee draw code is off.

Added subscriber: @antoniov

Added subscriber: @antoniov

I cannot reproduce on Windows with NVIDIA RTX2080TI

I just compiled last source code.

image.png

I cannot reproduce on Windows with NVIDIA RTX2080TI I just compiled last source code. ![image.png](https://archive.blender.org/developer/F8805764/image.png)

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Antonio Vazquez changed title from Blender Grease Pencil Material Crash 2.91.0 alpha to Crash using material panel on 2.91.0 alpha 2020-08-23 11:18:32 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

Added subscriber: @ditos

Added subscriber: @ditos

I can confirm the bug from Jonathan Mielke (jsm) (adding a material to a normal 3D object - Crash to Desktop) with Blender 2.91.0 Alpha August 22, 23:40:53- 010c1370af.

Fresh Blender without third party addons without userpref.blend and startup.blend.

Win 10 19042.450
GTX 1070 - Studiodriver 452.06

Blender-debug-all.txt

blender.crash.txt

I can confirm the bug from Jonathan Mielke (jsm) (adding a material to a normal 3D object - Crash to Desktop) with Blender 2.91.0 Alpha August 22, 23:40:53- 010c1370aff6. Fresh Blender without third party addons without userpref.blend and startup.blend. Win 10 19042.450 GTX 1070 - Studiodriver 452.06 [Blender-debug-all.txt](https://archive.blender.org/developer/F8805803/Blender-debug-all.txt) [blender.crash.txt](https://archive.blender.org/developer/F8805804/blender.crash.txt)

I cannot reproduce it, but according with th ecrash log is something related to GPU code.

@fclem can you reproduce it?

I cannot reproduce it, but according with th ecrash log is something related to GPU code. @fclem can you reproduce it?

I just compiled from the latest source and I am still getting the exact same crashes.

I just compiled from the latest source and I am still getting the exact same crashes.

This issue was referenced by e4932d1167

This issue was referenced by e4932d1167f486e59d38a9d599e473e4888872ec

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Clément Foucault self-assigned this 2020-08-23 14:49:20 +02:00
Added subscribers: @Phigon, @PetterLundh, @Luke.Coop, @PabloDobarro, @georgK, @Wyk, @ChrisGraz, @sbchild
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80034
No description provided.