Fix T80034 Crash using material panel on 2.91.0 alpha

This was caused by a NULL name.